Fix git branch and ipynbs

--- a/robotics_tutorials/_config.yml
+++ b/robotics_tutorials/_config.yml
@@ -30,6 +30,7 @@ parse:
 repository:
   url                       : https://github.com/ocean-perception/robotics_tutorials
   path_to_book              : robotics_tutorials
+  branch                    : main
 
 launch_buttons:
   notebook_interface        : jupyterlab
